<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@mipmap/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:src="@mipmap/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="@dimen/base_margin_vertical"
                android:paddingTop="@dimen/base_margin_vertical"
                android:text="@string/register_to_continue"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/white">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/login_registration_password"
                    android:nextFocusForward="@+id/login_registration_password"
                    android:nextFocusRight="@+id/login_registration_password"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textColorHint="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@android:drawable/ic_menu_view"
                    android:drawableRight="@android:drawable/ic_menu_view"
                    android:hint="@string/Password"
                    android:imeActionId="124"
                    android:imeActionLabel="@string/Log_in"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/tv_register"
                style="@style/buttonPrimaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:text="@string/Register"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>
