<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@mipmap/background">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/close" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="40dp"
                    android:src="@mipmap/logo" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/login_email_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight=".9"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/login_email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/base_margin_vertical"
                        android:paddingTop="@dimen/base_margin_vertical"
                        android:text="@string/Login_to_continue"
                        android:textColor="@color/textIconColorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_email_email_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColorHint="@color/white"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHighlight="@android:color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:theme="@style/EditTextTheme" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_email_password_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:textColorHint="@color/white"
                    app:hintTextAppearance="@style/MyAppearance"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <EditText
                        android:id="@+id/ed_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@android:drawable/ic_menu_view"
                        android:drawableRight="@android:drawable/ic_menu_view"
                        android:hint="@string/Password"
                        android:imeActionId="124"
                        android:imeActionLabel="@string/Log_in"
                        android:imeOptions="actionSend"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHighlight="@android:color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:theme="@style/EditTextTheme" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/login_email_confirm"
                    style="@style/buttonPrimaryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/Log_me_in"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/Forgot_your_password"
                    android:textColor="@color/textIconColorPrimary"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/ll_or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view1"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="1"
                        android:alpha=".2"
                        android:background="#ffffffff"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:alpha=".5"
                        android:gravity="center_vertical"
                        android:paddingLeft="2dp"
                        android:text="@string/or"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginRight="25dp"
                        android:layout_weight="1"
                        android:alpha=".2"
                        android:background="#ffffffff"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@color/transparent"
                        android:src="@mipmap/facebook" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/transparent"
                        android:src="@mipmap/google" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="Sign up now"
                        android:textColor="@color/black" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>